--- a/src/components/modules/Contacts/ContactList/ContactList.module.css
+++ b/src/components/modules/Contacts/ContactList/ContactList.module.css
@@ -1,4 +1,5 @@
 .listContact{
+
     list-style: none;
     width: 450px;
     padding: 20px;
@@ -7,11 +8,14 @@
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.22),
     0px 2px 2px rgba(0, 0, 0, 0.24),
     0px 2px 1px rgba(0, 0, 0, 0.32);
-    background-color:rgb(130, 101, 157);
+ 
 }
 
 .listItem {
+    padding-left: 140px;
 margin-bottom: 25px;
+color:rgba(255, 255, 255, 0.84);
+
 }
 
 .listButton{
