--- a/src/components/modules/Contacts/Filter/Filter.module.css
+++ b/src/components/modules/Contacts/Filter/Filter.module.css
@@ -1,6 +1,7 @@
 .input{
-    width: 300px;
-    height: 25px;
+    width: 390px;
+    height: 40px;
+    margin-left: 160px;
     background-color: rgba(172, 200, 214, 0.603);
     border-color: rgb(49, 22, 97);
 }
@@ -8,3 +9,11 @@
 .input:focus{
     background-color: beige;
 }
+
+ .text {
+     color: antiquewhite;
+     margin-top: 40px;
+     font-weight: 200;
+     font-size: 30px;
+     text-align: center;
+ }
