--- a/src/pages/Login/LoginForm.module.css
+++ b/src/pages/Login/LoginForm.module.css
@@ -1,32 +1,61 @@
-.form{
+form {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding-bottom: 20px;
     width: 450px;
-        padding: 20px;
-        border-radius: 5px;
-        box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.22), 0px 2px 2px rgba(0, 0, 0, 0.24),
-            0px 2px 1px rgba(0, 0, 0, 0.32);
-            padding-left: 140px;
-
 }
 
-label{
-    color:aliceblue
+
+.login_text{
+    color: rgb(251, 245, 238);
+        font-weight: 300;
+        padding-bottom: 30px;
+        padding-top: 35px;
+        text-align: center;
+}
+/* .form.input{
+
+} */
+.loginbox {
+    font-weight: 400;
+    display: flex;
+    flex-direction: column;
+    padding: 0 30px;
+    height: 100%;
+    color: rgb(255, 255, 255);
+    align-items: center;
+    text-align: center;
 }
 
-.input {
-    margin-top: 20px;
-border: 0;
-    outline: 0;
-    width: 100%;
+.reg_text {
+    color: rgb(251, 245, 238);
+    font-weight: 300;
+    padding-bottom: 30px;
+    padding-top: 35px;
+    text-align: center;
+}
+
+input {
     margin-bottom: 30px;
-    border-radius: 20px;
-    padding: 10px;
-background-color: rgb(227, 227, 248);
-   
+    height: 36px;
+    width: 440px;
+    color: aliceblue;
+    font-size: 22px;
+    border: none;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.895);
+    background-color: rgba(255, 255, 255, 0.1)
 }
 
-.input:focus{
-    background-color: rgb(196, 196, 254);
+input::placeholder {
+    color: rgba(249, 249, 249, 0.685);
+    padding-left: 10px;
 }
+
+input:focus {
+    background-color: rgba(0, 0, 0, 0.573);
+}
+
 
 @keyframes slideme {
     0% {
